--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "./dist/coquilleseed",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
