--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@diracleo/vue-enlargeable-image": "0.0.7",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "v-img": "^0.2.0",
